--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild index.js --bundle  --outfile=bundle.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,6 @@
   "dependencies": {
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3"
+   
   }
 }
