--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3"
-   
+  },
+  "devDependencies": {
+    "jest": "^29.4.3"
   }
 }
